New image assets added.
1. Rock
2. Paper
3. Scissors

--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -25,13 +25,13 @@
 		<!--Choices-->
 		<div class="choices">
 			<div class="choice" id="r">
-				<img src="images/rock.png" width="110" height="116" alt="Rock" />
+				<img src="images/rock-1.png" width="110" height="116" alt="Rock" />
 			</div>
 			<div class="choice" id="p">
-				<img src="images/paper.png" alt="Paper" />
+				<img src="images/paper-2.png" width="110" height="116" alt="Paper" />
 			</div>
 			<div class="choice" id="s">
-				<img src="images/scissors.png" width="110" height="116"  alt="Scissors" />
+				<img src="images/scissors-2.png" width="110" height="116"  alt="Scissors" />
 			</div>
 		</div>
 
